# fivetran-mcp

./: CLAUDE.md  README.md  pyproject.toml  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_tool.md
.github/feature_requests/: run_connection_tests.md
.github/workflows/: publish-mcp-registry.yaml
cloudflare/: README.md  pyproject.toml  wrangler.toml
cloudflare/src/: worker.py
src/fivetran_mcp/: client.py  fivetran_api.py  server.py
tests/: test_server.py
