[project]
name = "fivetran-mcp"
version = "0.1.0"
description = "MCP server for Fivetran API - manage syncs, check status, and control connections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
fivetran-mcp = "fivetran_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fivetran_mcp"]

[dependency-groups]
dev = []
